# Cluster

./: README.md
drone001/: CMakeLists.txt  package.xml
drone001/src/: drone001_node.cpp
drone002/: CMakeLists.txt  package.xml
drone002/src/: drone002_node.cpp
drone_msg_pkg/: CMakeLists.txt  package.xml
drone_msg_pkg/msg/: DroneState.msg
ros_bridge_server/: README.md  drone_status_subscriber.py  ros_bridge_server.launch.xml
